--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!--==================== CSS ====================-->
         <link rel="stylesheet" href="./assets/css/styles.css">
 
-        <title>Responsive Portfolio Website</title>
+        <title>Romil Jain</title>
     </head>
     <body>
         <!--==================== HEADER ====================-->
