--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
                         </div>
 
                         <div class="home__data">
-                            <h1 class="home__title">Hi, I'am Romil</h1>
-                            <h3 class="home__subtitle">Software developer and Graphic Designer</h3>
-                            <p class="home__description"> I love coding and I work as a MERN stack developer. I am very flexible and adaptive to learning new things.
+                            <h1 class="home__title">Hi, I'm Romil Jain</h1>
+                            <h3 class="home__subtitle">Software Engineer</h3>
+                            <p class="home__description"> A self-motivated and hardworking individual constantly involved in self-improvement and the ability to perform well in a team, Passionate about coding
                             </p>
                             <a href="#contact" class="button button--flex">
-                                Contact Me <i class="uil uil-message button__icon"></i>
+                                Download Resume <i class="uil uil-message button__icon"></i>
                             </a>
                         </div>
                     </div>
