embed instagram from eflsight

--- a/index.html
+++ b/index.html
@@ -757,6 +757,11 @@
                 </div>
             </div>
 
+            <!-- Instagram - https://apps.elfsight.com/panel/applications/instashow/  -->
+            <div class="container-b">
+                <div class="elfsight-app-dea65eb5-797e-4507-9bd9-4b57893ccc1d"></div>
+            </div>
+
             <!-- <div class="portfolio__container container swiper-container">
                     <div class="swiper-wrapper">
                         
@@ -1062,6 +1067,9 @@
 
     <!-- PROFILES JS - behance -->
     <script src="./assets/js/profiles.js"></script>
+
+    <!-- Load Instagram -->
+    <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 </body>
 
 </html>
