Add terminal for nerds
- Add commands and styles to terminal
- Enable dark theme by default
- Add Geo location command, social, get-location and various other cmds

--- a/index.html
+++ b/index.html
@@ -143,6 +143,40 @@
             </div>
         </section>
 
+        <!-- =================== Terminal ================ -->
+        <h2 class="section__title">Terminal for Nerds</h2>
+        <section class="terminal-section" id="home">
+
+            <div class="terminal" id="terminal">
+
+                <div class="terminal-container">
+                    <!-- Image -->
+                    <div class="terminal-image">
+                        <img src="https://cdn-icons-png.flaticon.com/512/4661/4661320.png" alt="Image"
+                            style="width: 100px;">
+                    </div>
+
+                    <!-- Name -->
+                    <div>
+                        <pre>
+██████   ██████  ███    ███ ██ ██               ██  █████  ██ ███    ██ 
+██   ██ ██    ██ ████  ████ ██ ██               ██ ██   ██ ██ ████   ██ 
+██████  ██    ██ ██ ████ ██ ██ ██               ██ ███████ ██ ██ ██  ██ 
+██   ██ ██    ██ ██  ██  ██ ██ ██          ██   ██ ██   ██ ██ ██  ██ ██ 
+██   ██  ██████  ██      ██ ██ ███████      █████  ██   ██ ██ ██   ████ .dev
+                        </pre>
+                    </div>
+                </div>
+                Terminal for Nerds like me<br>
+                Welcome to my website! Get started by typing `help` command below<br>
+                <div class="output" id="output"></div>
+                <div class="input-container">
+                    <div class="prompt">$ romil-jain-dev >> </div>
+                    <input type="text" id="command-input" autocomplete="off" autofocus>
+                </div>
+            </div>
+            <script src="./assets/js/terminalLogic.js"></script>
+        </section>
         <!--==================== ABOUT ====================-->
         <section class="about section" id="about">
             <h2 class="section__title">About Me</h2>
