--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
                     <input type="text" id="command-input" autocomplete="off" autofocus>
                 </div>
             </div>
+            <script src="typing-animation.js"></script>
             <script src="./assets/js/terminalLogic.js"></script>
         </section>
         <!--==================== ABOUT ====================-->
