--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                         <p class="home__description"> I work as a Junior SDE at Qualitia. I also enjoy UI/UX design. If
                             you have any open source project or Idea contact me
                         </p>
-                        <a href="#contact" class="button button--flex">
-                            Download Resume <i class="uil uil-message button__icon"></i>
+                        <a download='Romil-Cv.pdf' href="assets/pdf/Romil-Cv.pdf" class="button button--flex">
+                            Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                     </div>
 
                     <div style="display: inline;" class="about__buttons">
-                        <a download='' href="assets/pdf/Romil-Cv.pdf" class="button button--flex">
+                        <a download='Romil-Cv.pdf' href="assets/pdf/Romil-Cv.pdf" class="button button--flex">
                             Download CV<i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
